--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,7 @@ set(CMAKE_C_STANDARD 23)
 add_executable(machine_learning
 #        gradient_descent.c
 #        linear_regression_stochastic.c
-        linear_regression_batch.c
+#        linear_regression_batch.c
+        linear_regression_batch_momentum.c
+#        curve_fitting_with_GD.c
         )
